first project update

--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -4,22 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example of running API"
+    "# Example of running the Kolsnes Dew Point API"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examples of calculations using the Demo API\n",
+    "Examples of running the Kollsnes Dew Point API\n",
     "\n",
     "Run the API localy using the command:\n",
     "uvicorn main:app --reload \n",
     "\n",
-    "http://localhost:8000/\n",
-    "\n",
-    "\n",
-    "Fast API documentation: https://fastapi.tiangolo.com/"
+    "http://localhost:8000/"
    ]
   },
   {
@@ -44,24 +41,15 @@
     "import requests\n",
     "\n",
     "datasphaseopt = {\n",
-    "        \"N2\": 0.01,\n",
-    "        \"CO2\": 0.02,\n",
-    "        \"methane\": 0.9,\n",
-    "        \"ethane\": 0.05,\n",
-    "        \"propane\": 0.02,\n",
-    "        \"ibutane\": 0.01,\n",
-    "        \"nbutane\": 0.01,\n",
-    "        \"npentane\": 0.01,\n",
-    "        \"nhexane\": 0.001,\n",
-    "        'temperature_inlet': 20.0,\n",
-    "        'pressure_inlet': 25.0,\n",
-    "        'temperature_outlet': 95.0,\n",
-    "        'pressure_outlet': 60.0\n",
+    "        'MEGflow': 1000.0, #kg/hr\n",
+    "        'feedGasFlow': 20.0, #MSm3/day\n",
+    "        'temperature_dpscrubber': -25.0, #deg C\n",
+    "        'pressure_dpscrubber': 30.0 # bara\n",
     "} \n",
     "data_json1 = json.dumps(datasphaseopt)\n",
     "\n",
     "try:\n",
-    "        response = requests.post('http://localhost:8000/compressorCalc', data_json1)  \n",
+    "        response = requests.post('http://localhost:8000/waterDewPoint', data_json1)  \n",
     "except:\n",
     "        print(\"No respons after max time...continuing\")\n",
     "\n",
