--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -21,17 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'polytropicEfficiency': 0.8074136806721035,\n",
-       " 'polytropiFluidHeaad': 116.55320136694323}"
+       "{'waterDewPoint': -19.800930104692156}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,12 +43,12 @@
     "        'MEGflow': 1000.0, #kg/hr\n",
     "        'feedGasFlow': 20.0, #MSm3/day\n",
     "        'temperature_dpscrubber': -25.0, #deg C\n",
-    "        'pressure_dpscrubber': 30.0 # bara\n",
+    "        'pressure_dpscrubber': 30.0 # pressure in bara \n",
     "} \n",
     "data_json1 = json.dumps(datasphaseopt)\n",
     "\n",
     "try:\n",
-    "        response = requests.post('http://localhost:8000/waterDewPoint', data_json1)  \n",
+    "        response = requests.post('http://localhost:8000/kol2/waterDewPoint', data_json1)  \n",
     "except:\n",
     "        print(\"No respons after max time...continuing\")\n",
     "\n",
