--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'waterDewPoint': -19.800930104692156}"
+       "{'waterDewPoint': -26.497749672228764, 'hydrocarbonDewPoint': 29.5419313416906}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,6 +44,45 @@
     "        'feedGasFlow': 20.0, #MSm3/day\n",
     "        'temperature_dpscrubber': -25.0, #deg C\n",
     "        'pressure_dpscrubber': 30.0 # pressure in bara \n",
+    "} \n",
+    "data_json1 = json.dumps(datasphaseopt)\n",
+    "\n",
+    "try:\n",
+    "        response = requests.post('http://localhost:8000/kol2/waterDewPoint', data_json1)  \n",
+    "except:\n",
+    "        print(\"No respons after max time...continuing\")\n",
+    "\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'waterDewPoint': -28.64137610210355}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "\n",
+    "datasphaseopt = {\n",
+    "  'feedFlowRateTrain1': 11411.9,\n",
+    "  'feedPressure': 89.0,\n",
+    "  'feedTemperature': 5.0,\n",
+    "  'sep1Pressure': 85.0,\n",
+    "  'cooler1T': -5.0,\n",
+    "  'expOutPressure': 67.0,\n",
+    "  'glycolFlow': 1.0\n",
     "} \n",
     "data_json1 = json.dumps(datasphaseopt)\n",
     "\n",
