--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -21,16 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'waterDewPoint': -26.497749672228764, 'hydrocarbonDewPoint': 29.5419313416906}"
+       "{'waterDewPoint': -14.746082545389982,\n",
+       " 'hydrocarbonDewPoint': -10.770854343373173}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +44,8 @@
     "        'MEGflow': 1000.0, #kg/hr\n",
     "        'feedGasFlow': 20.0, #MSm3/day\n",
     "        'temperature_dpscrubber': -25.0, #deg C\n",
-    "        'pressure_dpscrubber': 30.0 # pressure in bara \n",
+    "        'pressure_dpscrubber': 30.0, # pressure in bara \n",
+    "        'glycolFlow': 0.5\n",
     "} \n",
     "data_json1 = json.dumps(datasphaseopt)\n",
     "\n",
@@ -57,16 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'waterDewPoint': -28.64137610210355}"
+       "{'waterDewPoint': -16.036921476367297,\n",
+       " 'hydrocarbonDewPoint': -11.541251336009907}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,13 +79,13 @@
     "import requests\n",
     "\n",
     "datasphaseopt = {\n",
-    "  'feedFlowRateTrain1': 11411.9,\n",
-    "  'feedPressure': 89.0,\n",
+    "  'feedFlowRateTrain1': 25.83,\n",
+    "  'feedPressure': 91.85,\n",
     "  'feedTemperature': 5.0,\n",
-    "  'sep1Pressure': 85.0,\n",
+    "  'sep1Pressure': 87.94,\n",
     "  'cooler1T': -5.0,\n",
-    "  'expOutPressure': 67.0,\n",
-    "  'glycolFlow': 1.0\n",
+    "  'expOutPressure': 68.18,\n",
+    "  'glycolFlow': 0.12295224\n",
     "} \n",
     "data_json1 = json.dumps(datasphaseopt)\n",
     "\n",
