--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -21,17 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'waterDewPoint': -27.974360733870782,\n",
-       " 'hydrocarbonDewPoint': -22.76811236395463}"
+       "{'waterDewPoint': -28.005767580260283,\n",
+       " 'hydrocarbonDewPoint': -13.555925985513852,\n",
+       " 'hydrateTDewTScrubber': -67.18415778233643}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
