--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -21,18 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'waterDewPoint': -28.005767580260283,\n",
-       " 'hydrocarbonDewPoint': -13.555925985513852,\n",
-       " 'hydrateTDewTScrubber': -67.18415778233643}"
+       "{'waterDewPoint': -14.735179998701994,\n",
+       " 'hydrocarbonDewPoint': -13.261864026578962,\n",
+       " 'hydrateTDewTScrubber': -9.9682197296803,\n",
+       " 'MEGfrezeT': -9999.0}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,13 +43,14 @@
     "import requests\n",
     "\n",
     "datasphaseopt = {\n",
-    "  'feedFlowRateTrain1': 25.83,\n",
+    "  'feedFlowRateTrain1': 20.83,\n",
     "  'feedPressure': 91.85,\n",
-    "  'feedTemperature': 5.0,\n",
+    "  'feedTemperature': 6.0,\n",
     "  'sep1Pressure': 87.94,\n",
-    "  'cooler1T': -5.0,\n",
+    "  'cooler1T': -13.0,\n",
     "  'expOutPressure': 68.18,\n",
-    "  'glycolFlow': 0.212410410312512295224\n",
+    "  'glycolFlow': 0.128212721681212410410312512295224,\n",
+    "  'expOutTemperature': -20.0\n",
     "} \n",
     "data_json1 = json.dumps(datasphaseopt)\n",
     "\n",
