--- a/dewPoint/example/example.ipynb
+++ b/dewPoint/example/example.ipynb
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'waterDewPoint': -14.735179998701994,\n",
-       " 'hydrocarbonDewPoint': -13.261864026578962,\n",
-       " 'hydrateTDewTScrubber': -9.9682197296803,\n",
-       " 'MEGfrezeT': -9999.0}"
+       "{'waterDewPoint': -28.034377561191093,\n",
+       " 'hydrocarbonDewPoint': -8.954980714843884,\n",
+       " 'hydrateTDewTScrubber': -70.9467229326813,\n",
+       " 'MEGfrezeT': -31.95459534946565}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
